@@ -1,3 +1,4 @@
+1/14/14 make RatioNode responsible for its own positioning
 1/14/14 expand touchArea for picker in 'Custom' pH meter
 1/14/14 fix: show 'Solutions' pH meter pointer only if meter is expanded
 1/14/14 add option.emptyWhenSoluteChanges to Solution, needed for 'Custom' screen where a new custom solute is created as the pH changes
